--- a/infrastructure-charts/values.yaml
+++ b/infrastructure-charts/values.yaml
@@ -42,24 +42,30 @@ charts:
     targetRevision: 22.1.5
     parameters:
       "kafka.replicaCount": "1"
-  # Remote chart from public helm repo
-  bitnami-kafka:
-    namespace: bitnami-kafka # Which namespace should the service be deployed
-    repoURL: "https://charts.bitnami.com/bitnami" # Helm repo URL by default it takes the helm repo URL from line 11
-    targetRevision: 22.1.5
-    overrideChartName: kafka # You can override the chart name
-    disableAutoSync: false # If set to true the sync will not happen automatically, you need to do it manually over the UI
-    parameters:
-      "kafka.replicaCount": "1"
-  # Local chart for development purposes
   akhq:
     namespace: kafka
-    repoURL: "https://github.com/iits-consulting/otc-infrastructure-charts-template.git"
-    targetRevision: "main"
-    path: "local-charts/akhq"
+    targetRevision: 0.3.3
   # Override values with local values file
   iits-admin-dashboard:
     namespace: admin
     targetRevision: 1.2.1
-    # values files needs to be inside this chart
-    valueFile: "value-files/admin-dashboard/values.yaml"
+  kasm:
+    namespace: kasm
+    targetRevision: "0.1.1"
+    parameters:
+      services.firstuser.extraEnv.VNC_PW: "6upWDZ2DQwsmz,S%Eys,qmfE9GlpwuQy"
+      services.firstuser.ingressRoute.domain: "firstuser.{{.Values.projectValues.rootDomain}}"
+  otc-nextcloud:
+    targetRevision: "0.1.0"
+    parameters:
+      ingressRoute.domain: "nextcloud.{{.Values.projectValues.rootDomain}}"
+
+      nextcloud.externalDatabase.password: "REPLACE_ME"
+      nextcloud.externalDatabase.host: "REPLACE_ME"
+      nextcloud.externalDatabase.user: "REPLACE_ME"
+      nextcloud.externalDatabase.port: "REPLACE_ME"
+
+      nextcloudStorage.s3.S3_BUCKET_NAME: "REPLACE_ME"
+      nextcloudStorage.s3.S3_PUBLIC_KEY: "REPLACE_ME"
+      nextcloudStorage.s3.S3_SECRET_KEY: "REPLACE_ME"
+      nextcloudStorage.s3.S3_BUCKET_URL: "REPLACE_ME"
