--- a/infrastructure-charts/values.yaml
+++ b/infrastructure-charts/values.yaml
@@ -50,11 +50,11 @@ charts:
     namespace: admin
     targetRevision: 1.2.3
   elastic-stack:
-    namespace: monitoring
+    namespace: elastic
     targetRevision: 7.17.4
     adminDomain: "admin.{{.Values.projectValues.rootDomain}}"
     parameters:
-      elasticsearch.replicas: "2"
+      elasticsearch.replicas: "1"
   kasm:
     namespace: kasm
     targetRevision: 0.1.1
